--- a/helloRetail.yml
+++ b/helloRetail.yml
@@ -1,1 +1,2 @@
 name: hello-retail
+deploymentBucket: com.${self:custom.private.company}.${self:custom.private.team}.serverless.${self:provider.region}
