PR Comment Resolution
1. Use the correct "Service" vernacular
2. Remove unnecessary quotes from yml
3. Rename the `new-product-simulator` service to ``${self:custom.helloRetail.name}-product-creation` => `hello-retail-product-creation`.  Synchronize the name of the folder containing that project.
4. temporarily use my private serverless repo

--- a/helloRetail.yml
+++ b/helloRetail.yml
@@ -1,4 +1,4 @@
-# Projects must include this file as follows:
+# Services must include this file as follows:
 # ```
 # custom:
 #   helloRetail: ${file(../helloRetail.yml)}}
