--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,8 @@ phases:
       - echo
       - node --version
       - npm --version
-      - npm install -g serverless
+      #- npm install -g serverless
+      - npm install -g git+https://github.com/erikerikson/serverless.git#allow-self-reference
 
       - sls --version
       - echo
@@ -20,7 +21,7 @@ phases:
     commands:
       - chmod 700 $CODEBUILD_SRC_DIR/build/1.install.sh
       - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Top-Level Project Dependencies"     $CODEBUILD_SRC_DIR
-      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing New Product Simulator Dependencies" $CODEBUILD_SRC_DIR/products/lambda
+      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing New Product Simulator Dependencies" $CODEBUILD_SRC_DIR/product-creation/lambda
       - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Product Catalog Dependencies"       $CODEBUILD_SRC_DIR/product-catalog
   build:
     commands:
@@ -28,5 +29,5 @@ phases:
       - npm run lint
       - chmod 700 $CODEBUILD_SRC_DIR/build/2.deploy.sh
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Retail Stream"              $CODEBUILD_SRC_DIR/retail-stream
-      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying New Products Simulator"     $CODEBUILD_SRC_DIR/products/lambda
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying New Products Simulator"     $CODEBUILD_SRC_DIR/product-creation/lambda
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Catalog Processor"  $CODEBUILD_SRC_DIR/product-catalog
