Used HostedZoneId for RecordSetGroup and AliasTarget.

--- a/web/serverless.yml
+++ b/web/serverless.yml
@@ -116,17 +116,15 @@ resources:
     HelloRetailWebRecordSetGroup:
       Type: AWS::Route53::RecordSetGroup
       Properties:
-        HostedZoneName: ${self:custom.domainName}.
+        HostedZoneId: ${self:custom.hostedZoneId}
         RecordSets:
         - Name: ${self:custom.dnsHostName}
           Type: A
-          HostedZoneName: ${self:custom.domainName}.
           AliasTarget:
             DNSName: ${self:custom.originDomainName}
             HostedZoneId: ${self:custom.hostedZoneId}
         - Name: ${self:custom.dnsHostName}
           Type: AAAA
-          HostedZoneName: ${self:custom.domainName}.
           AliasTarget:
             DNSName: ${self:custom.originDomainName}
             HostedZoneId: ${self:custom.hostedZoneId}
